# todo-app

./: .gitignore
api/: .env.example  .gitignore  pyproject.toml
api/.devcontainer/: docker-compose.yml
api/config/: schema.py  settings.py  urls.py
api/example_app/: models.py  schema.py
api/example_app/example_model/: models.py  schema.py  types.py
api/example_app/migrations/: 0001_initial.py
api/todo/: schema.py
api/todo/migrations/: 0001_initial.py
app/: nuxt.config.ts  package.json  pnpm-lock.yaml  schema.ts
app/components/: TodoInput.vue  TodoItem.vue  TodoList.vue
app/composables/: gql.ts  useTodos.ts
app/graphql/mutations/: todos.ts
app/graphql/queries/: todos.ts
app/pages/: index.vue
app/plugins/: leanbase.client.ts
